feat: add security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,10 @@ spring.datasource.username=task_manager_user
 spring.datasource.password=task_manager_password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.security = DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
