--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,17 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  app:
+    image: task-manager-service
+    container_name: task_manager_app
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/task_manager_db
+      SPRING_DATASOURCE_USERNAME: task_manager_user
+      SPRING_DATASOURCE_PASSWORD: task_manager_password
+    depends_on:
+      - db
+
 volumes:
   postgres_data:
